HTTPError fixes, docs
